force-app/main/default/objects/B_Invoice__c.object
<CustomObject>
    <fields>
        <fullName>B_Customer__c</fullName>
        <label>Customer Name</label>
        <referenceTo>B_Customer__c</referenceTo>
        <relationshipLabel>B_Invoices</relationshipLabel>
        <relationshipName>B_Invoices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>B_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Name</label>
        <referenceTo>B_Product__c</referenceTo>
        <relationshipLabel>B_Invoices</relationshipLabel>
        <relationshipName>B_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>15</precision>
        <required>true</required>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <label>B_Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IID-{00000}</displayFormat>
        <label>Invoice ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B_Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>